# Path-Tracing

./: REPORT.md
code/: CMakeLists.txt  run_all.sh
code/include/: camera.hpp  curve.hpp  group.hpp  hit.hpp  image.hpp  light.hpp  material.hpp  mesh.hpp  path_tracing.hpp  plane.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  triangle.hpp
code/src/: image.cpp  main.cpp  mesh.cpp  path_tracing.cpp  scene_parser.cpp
code/testcases/: complex.txt  complex_fov.txt  curve_spiral.txt  depth_of_view.txt  diffused_spheres.txt  glass_complex.txt  glass_complex_dov.txt  glass_rabbit200.txt  mirror_light_spheres.txt  scene09_norm.txt
code/testcases/old/: scene00_CornellBox-sphere&cube.txt  scene00_CornellBox_rabbit200_3000.txt  scene00_CornellBox_reflect0.3_5000.txt  scene00_CornellBox_save.txt
